# liveview

./: .env.example  .gitignore  APPSTORE_METADATA.md  README.md  TESTING_COMPLETE.md  TESTING_ECOSYSTEM_OVERVIEW.md  TESTING_INDEX.md  TESTING_SETUP_COMPLETE.md  capacitor.config.json  package-lock.json  package.json  push-to-github.sh  run-frontend.sh  setup-tests.sh  verify-tests-setup.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth_routes.py  cron-seed.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run_migration_002.py  run_migration_003.py  run_migration_005.py  run_migration_007.py  run_migration_008.py  run_migrations.py  seed.py
backend/api/: app.py  dependencies.py  live_fallback.py  middleware.py  service.py
backend/auth/: __init__.py  deps.py  models.py
backend/builder/: service.py
backend/ingest/: news_fetcher.py  service.py
backend/migrations/: 001_initial.sql  002_add_football_sport.sql  003_news.sql  004_match_state_updated_at.sql  005_notifications.sql  006_auth_users.sql  007_provider_columns.sql  008_soft_deletes.sql  009_password_reset_tokens.sql
backend/notifications/: apns.py  deliver_apns.py  deliver_webpush.py  dispatcher.py  engine.py  models.py
backend/scheduler/: service.py
backend/scripts/: delete_user.py  gen_apple_secret.py  integration_live_scores.py
backend/shared/: config.py  match_phase.py  match_resolution.py  provider_mapping.py  query_monitoring.py  tracing.py
backend/tests/: conftest.py  test_api.py  test_api_service_port_resolution.py  test_integration_api.py  (+20 more)
(+342 files in other folders)
