[project]
name = "liveview"
version = "1.0.0"
description = "Real-time sports tracking platform with sub-second updates"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "websockets>=12.0,<14.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25,<3.0",
    "asyncpg>=0.29.0,<1.0",
    "alembic>=1.13.0,<2.0",

    # Redis
    "redis[hiredis]>=5.0.0,<6.0",

    # HTTP client
    "httpx>=0.26.0,<1.0",

    # Data validation
    "pydantic>=2.5.0,<3.0",
    "pydantic-settings>=2.1.0,<3.0",

    # Logging
    "structlog>=24.1.0,<25.0",

    # Metrics
    "prometheus-client>=0.20.0,<1.0",

    # Utilities
    "orjson>=3.9.0,<4.0",
    "tenacity>=8.2.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
